Fix jdk8 compatibility